<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triage App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="title_activity_records">RecordsActivity</string>
    <string name="patient_view">Patients</string>
    <string name="new_record">New Record</string>
    <string name="new_patient">New Patient</string>
    <string name="title_activity_display_message">Patient Database</string>
    <string name="edit_message">Enter a Health Card Number</string>
    <string name="search_view">Search</string>
    <string name="home_view">Home</string>
    <string name="title_activity_record">Patient Record</string>
    <string name="sort_button">Urgency</string>
    <string name="clear_search_button">Clear sort</string>
    <string name="save_button">Save Record</string>
    <string name="back_button">Back</string>
    <string name="input_add">Enter a Health Card Number</string>
    <string name="input_name">Enter a Name</string>
    <string name="input_birthday">Enter a Birthday</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="health_card_number">Health Card Number</string>
    <string name="arrivaltime">Arrival Time</string>
    <string name="seen">Seen</string>
    <string name="temperature">Temperature</string>
    <string name="heartrate">Heart Rate</string>
    <string name="diastolicpressure">Diastolic Pressure</string>
    <string name="systolicpressure">Systolic Pressure</string>
    <string name="symptoms">Symptoms</string>
    <string name="seenat">Seen At</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="medication">Medication</string>
    <string name="instruction">Instructions</string>
    <string name="patientSeen">Checked by doctor</string>

    <color name="white">#FFFFFF</color>
    <color name="red">#ffff0000</color>
    <string name="sort_message">Sort Unseen</string>

</resources>
